--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -74,7 +74,7 @@
       <textarea aria-label="Lorum ipsum dolor sit amet..." class="form__textarea textarea--js" name="main__text"
         id="main__text" placeholder="Lorum ipsum dolor sit amet..."></textarea>
       <div class="form__buttons">
-        <button class="form__button form__button--load load--js">Load</button>
+        <button class="form__button form__button--load load--js">Load <span class="info--js"></span></button>
         <button class="form__button form__button--save save--js">Save</button>
       </div>
     </form>
